--- a/about.html
+++ b/about.html
@@ -69,6 +69,25 @@
                     jurisdiction of the courts in Pattathanam, Kerala
                     All concerns or communications relating to these Terms must be communicated to us using the
                     contact information provided on this website.</p>
+                <p>Cancellation & Refund Policy
+Last updated on 02-04-2025 15:37:06
+Mohammed Saidali N believes in helping its customers as far as possible, and has therefore a liberal
+cancellation policy. Under this policy:
+• Cancellations will be considered only if the request is made immediately after placing the order.
+However, the cancellation request may not be entertained if the orders have been communicated to the
+vendors/merchants and they have initiated the process of shipping them.
+• Mohammed Saidali N does not accept cancellation requests for perishable items like flowers, eatables
+etc. However, refund/replacement can be made if the customer establishes that the quality of product
+delivered is not good.
+• In case of receipt of damaged or defective items please report the same to our Customer Service team.
+The request will, however, be entertained once the merchant has checked and determined the same at his
+own end. This should be reported within 15 Days days of receipt of the products. In case you feel that the
+product received is not as shown on the site or as per your expectations, you must bring it to the notice of
+our customer service within 15 Days days of receiving the product. The Customer Service Team after
+looking into your complaint will take an appropriate decision.
+• In case of complaints regarding products that come with a warranty from manufacturers, please refer
+the issue to them. In case of any Refunds approved by the Mohammed Saidali N, it’ll take 16-30 Days
+days for the refund to be processed to the end customer.</p>
             </div>
             <p class="cta">With <strong>Zooho App</strong>, dining out and preordering food online has never been easier. Download now and enjoy a hassle-free experience! </p>
         </div>
